<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">

        <TextView
            android:id="@+id/tv_number_and_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/my_set_password_toast"
            android:textColor="@color/color_8E92A3"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/my_wallet_set_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/color_333649"
            android:textColorHint="@color/color_8E92A3"
            android:textSize="18sp" />

        <include layout="@layout/layout_line" />

        <TextView
            android:id="@+id/tv_different"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="1dp"
            android:text="@string/my_set_password_different"
            android:textColor="@color/red_common"
            android:textSize="14sp"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/et_password_again"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/my_change_password_again"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/color_333649"
            android:textColorHint="@color/color_8E92A3"
            android:textSize="18sp" />

        <include layout="@layout/layout_line" />

        <Button
            android:id="@+id/btn_sure"
            style="@style/buttonPressStyle"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"
            android:text="@string/ok"
            android:textSize="17sp" />

    </LinearLayout>
</LinearLayout>

