<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/sv_root"
        android:layout_width="match_parent"
        android:layout_marginBottom="79dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16">

                <TextView
                    android:id="@+id/tv_wrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_change_password_wrong"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/red_common"
                    android:textSize="14sp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/et_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:drawableBottom="@drawable/shape_line"
                    android:hint="@string/my_change_password_old"
                    android:inputType="textPassword"
                    android:textColor="@color/color_333649"
                    android:textColorHint="@color/color_8E92A3"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_same"
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:layout_weight="1"
                        android:text="@string/my_change_password_same"
                        android:textColor="@color/red_common"
                        android:textSize="14sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_number_and_letter"
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:layout_weight="1"
                        android:text="@string/my_set_password_toast"
                        android:textColor="@color/color_8E92A3"
                        android:textSize="13sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:maxLength="16"
                    android:background="@null"
                    android:drawableBottom="@drawable/shape_line"
                    android:hint="@string/my_change_password_new"
                    android:inputType="textPassword"
                    android:textColor="@color/color_333649"
                    android:textColorHint="@color/color_8E92A3"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_line"
                    android:background="@color/lineColor" />



                <TextView
                    android:id="@+id/tv_different"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/my_set_password_different"
                    android:textColor="@color/red_common"
                    android:textSize="14sp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/et_password_again"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:maxLength="16"
                    android:background="@null"
                    android:drawableBottom="@drawable/shape_line"
                    android:hint="@string/my_change_password_again"
                    android:inputType="textPassword"
                    android:textColor="@color/color_333649"
                    android:textColorHint="@color/color_8E92A3"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_line"
                    android:background="@color/lineColor" />

                <Button
                    android:id="@+id/btn_sure"
                    style="@style/buttonPressStyle"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="20dp"
                    android:text="@string/ok"
                    android:textSize="17sp" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
