<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f8f8fa"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:drawableRight="@mipmap/icon_right_wallet"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="@string/my_wallet_forget_password"
        android:textColor="@color/gray_349"
        android:textSize="@dimen/sp_16"
        android:visibility="visible" />

    <TextView
        android:id="@+id/updatePassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:drawableRight="@mipmap/icon_right_wallet"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="@string/change_password"
        android:textColor="@color/gray_349"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:layout_marginLeft="18dp"
        android:background="@color/lineColor" />

    <TextView
        android:id="@+id/updateName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:drawableRight="@mipmap/icon_right_wallet"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="@string/my_wallet_detail_update_name"
        android:textColor="@color/gray_349"
        android:textSize="@dimen/sp_16" />


    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/outMnem"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:drawableRight="@mipmap/icon_right_wallet"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="@string/my_wallet_detail_out_mnem"
        android:textColor="@color/gray_349"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:layout_marginLeft="18dp"
        android:background="@color/lineColor" />

    <TextView
        android:id="@+id/outPriv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:drawableRight="@mipmap/icon_right_wallet"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="@string/my_wallet_detail_export"
        android:textColor="@color/gray_349"
        android:textSize="@dimen/sp_16" />



    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:layout_marginLeft="18dp"
        android:background="@color/lineColor" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="31dp"
        android:background="@drawable/my_wallet_detail_delete"
        android:gravity="center"
        android:text="@string/my_wallet_detail_delete"
        android:textColor="@color/color_cc3939"
        android:textSize="16sp" />


</LinearLayout>

