<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_re_white"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:padding="10dp"
            android:id="@+id/iv_close"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_close" />

        <LinearLayout
            android:id="@+id/ll_out_miner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="16dp"
                    android:text="@string/home_miner_fee"
                    android:textColor="@color/color_333649" />

                <TextView
                    android:id="@+id/tv_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textColor="@color/color_333649"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_fee_coin_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/common_null"
                    android:textColor="@color/color_333649"
                    android:textSize="14sp" />


            </LinearLayout>

            <SeekBar
                android:id="@+id/seekbar_money"
                style="@style/CustomSeekbarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:splitTrack="false" />


            <LinearLayout
                android:id="@+id/ll_v_miner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="16dp"
                    android:text="@string/home_slow"
                    android:textColor="@color/gray_99"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/home_optimum"
                    android:textColor="@color/gray_99"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_fast"
                    android:textColor="@color/gray_99"
                    android:textSize="13sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="25dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/my_wallet_detail_password"
                android:textColor="@color/gray_349"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="45dp"
            android:layout_height="4dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:background="@color/color_7190FF" />

        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@color/gray_f8"
            android:hint="@string/my_wallet_detail_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/gray_33"
            android:textSize="17sp" />


        <Button
            android:id="@+id/btn_ok"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/bg_shape_button"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

    </LinearLayout>

</RelativeLayout>